# mini-crm-repair-requests

./: .gitignore  Dockerfile  README  README.md  docker-compose.docker-hub.yaml  docker-compose.yaml  init_data.py  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yaml
alembic/: env.py
alembic/versions/: 85da0df00316_init.py  ea1a092a4205_.py
app/: core.py  crud.py  db.py  deps.py  main.py  models.py  schemas.py
app/routers/: admin.py  auth.py  public.py  worker.py
